--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Neighbors Mobile Detailers | Austin Mobile Detailing | Ceramic Coating & PPF</title>
-    <meta name="description" content="Neighbors Mobile Detailers - Austin's trusted mobile detailing company. Professional auto detailing, ceramic coatings, paint protection film, window tinting, and vehicle wraps. We come to you!" />
-    <meta name="keywords" content="Austin mobile detailing, Austin auto detailing, ceramic coating Austin, PPF Austin, paint protection film Austin, window tinting Austin, vehicle wraps Austin, car detailing Austin" />
+    <title>Neighbors Mobile Detailers | Austin Mobile Detailing & Ceramic Coating</title>
+    <meta name="description" content="Neighbors Mobile Detailers - Austin's trusted mobile detailing company. Professional auto detailing, ceramic coatings, and paint correction. We come to you!" />
+    <meta name="keywords" content="Austin mobile detailing, Austin auto detailing, ceramic coating Austin, paint correction Austin, car detailing Austin" />
     <meta name="author" content="Neighbors Mobile Detailers" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://www.neighborsmobiledetailing.com" />
@@ -13,8 +13,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.neighborsmobiledetailing.com" />
-    <meta property="og:title" content="Neighbors Mobile Detailers | Austin Mobile Detailing | Ceramic Coating & PPF" />
-    <meta property="og:description" content="Austin's trusted mobile detailing company. Professional auto detailing, ceramic coatings, paint protection film, window tinting, and vehicle wraps. We come to you!" />
+    <meta property="og:title" content="Neighbors Mobile Detailers | Austin Mobile Detailing & Ceramic Coating" />
+    <meta property="og:description" content="Austin's trusted mobile detailing company. Professional auto detailing, ceramic coatings, and paint correction. We come to you!" />
     <meta property="og:image" content="https://www.neighborsmobiledetailing.com/og-image.png" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="Neighbors Mobile Detailers" />
@@ -23,7 +23,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://www.neighborsmobiledetailing.com" />
     <meta name="twitter:title" content="Neighbors Mobile Detailers | Austin Mobile Detailing" />
-    <meta name="twitter:description" content="Austin's trusted mobile detailing company. Professional auto detailing, ceramic coatings, PPF, window tinting, and vehicle wraps." />
+    <meta name="twitter:description" content="Austin's trusted mobile detailing company. Professional auto detailing, ceramic coatings, and paint correction." />
     <meta name="twitter:image" content="https://www.neighborsmobiledetailing.com/og-image.png" />
     
     <!-- Local Business Schema -->
@@ -45,8 +45,8 @@
       },
       "geo": {
         "@type": "GeoCoordinates",
-        "latitude": 33.4484,
-        "longitude": -112.0740
+        "latitude": 30.2672,
+        "longitude": -97.7431
       },
       "openingHoursSpecification": {
         "@type": "OpeningHoursSpecification",
